# paper-reader

./: LICENSE  README.md
paper-reader-api/: README.md  api.md  dockerfile  pyproject.toml
paper-reader-api/paper_reader_api/: app.py  arxiv_api.py  config.py  data.py  dbmodel.py  requirements.txt
paper-reader-api/paper_reader_api/static/: loading.js  styles.css
paper-reader-api/paper_reader_api/templates/: 404.html  error.html  paper.html
paper-reader-api/tests/: test_main.py
